--- a/geocities/index.html
+++ b/geocities/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
+<head>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">  
     <title>Geocites</title>
-  </header>   
+  </head>   
 <body>
     <h1>Butterflies Everywhere</h1>
-    <img src="images_gifs/images/Unknown-3.jpeg" class="butterfly-img" alt="Butterfly 1"> 
+    <img src="images_gifs/images/Unknown-3.jpeg"class="butterfly-img" alt="Butterfly 1"> 
     <img src="images_gifs/images/Unknown-4.jpeg" alt="Butterfly 2">
     <img src="images_gifs/images/Unknown-5.jpeg" alt="Butterfly 3">
     <img src="images_gifs/images/butterfly.gif"class="butterfly-gif" alt="gif 1">
