--- a/in_class/week08/Nested_Folders/deeper_folder_1/deeper-folder.html
+++ b/in_class/week08/Nested_Folders/deeper_folder_1/deeper-folder.html
@@ -14,7 +14,7 @@
         <a href="/webdev1/assignments/css_intro/index.html">css_intro</a>
         <a href="/webdev1/assignments/geocities/index.html">geocities</a>
         <a href="/webdev1/assignments/smartphone/index.html">smartphone</a>
-        <a href="../../Nested_Folders/"></a>
+        <a href="../../nested_folders/"></a>
         <a href="..">Nested Folders(Home)</a>
         <a href=".."></a>
     </nav>
