CSS Nesting Assignment

--- a/assignments/geocities/index.html
+++ b/assignments/geocities/index.html
@@ -9,12 +9,12 @@
   </head>   
 <body>
     <h1>Butterflies Everywhere</h1>
-    <img src="images_gifs/images/Unknown-3.jpeg"class="butterfly-img" alt="Butterfly 1"> 
-    <img src="images_gifs/images/Unknown-4.jpeg" alt="Butterfly 2">
-    <img src="images_gifs/images/Unknown-5.jpeg" alt="Butterfly 3">
-    <img src="images_gifs/images/butterfly.gif"class="butterfly-gif" alt="gif 1">
-    <img src="images_gifs/images/butterfly2.gif" alt="gif 2">
-    <img src="images_gifs/images/butterflypastel.gif" alt="gif 3">
+    <img src="images_gifs/Unknown-3.jpeg"class="butterfly-img" alt="Butterfly 1"> 
+    <img src="images_gifs/Unknown-4.jpeg" alt="Butterfly 2">
+    <img src="images_gifs/Unknown-5.jpeg" alt="Butterfly 3">
+    <img src="images_gifs/butterfly.gif"class="butterfly-gif" alt="gif 1">
+    <img src="images_gifs/butterfly2.gif" alt="gif 2">
+    <img src="images_gifs/butterflypastel.gif" alt="gif 3">
     <p> Butterflies are truly everywhere </p>
 </body>
 </html>
