--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Kacey's Webdev1 Homepage</title>
+    <link rel="stylesheet" href="style.css">  
+    <title>Kacey's WebDev1 Homepage</title>
 </head>
 <body>
-    <h1>Kacey's Webdev1 Homepage</h1>
+    <h1>
+        Kacey's WebDev1 Homepage
+    </h1>
     <nav>
-        <a href="assignments/css_intro/">CSS Basics</a>
+        <a href="assignments/css_intro/index.html">css_intro</a>
+        <a href="assignments/geocities/index.html">geocities</a>
+        <a href="assignments/smartphone/index.html">smartphone</a>
     </nav>
 </body>
 </html>
