CSS Loading Bar/ Waiting Circle

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <a href="assignments/css_intro/index.html">css_intro</a>
         <a href="assignments/geocities/index.html">geocities</a>
         <a href="assignments/smartphone/index.html">smartphone</a>
+        <a href="assignments/loading-bar/loading-bar/index.html">loading-bar</a>
+        <a href="assignments/loading-bar/waiting circle/index.html">waiting circle</a>
+    
     </nav>
 </body>
 </html>
