CSS_Webpage Part II

--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
         Kacey's WebDev1 Homepage
     </h1>
     <nav>
-        <a href="assignments/css_intro/index.html">css_intro</a>
-        <a href="assignments/geocities/index.html">geocities</a>
-        <a href="assignments/smartphone/index.html">smartphone</a>
-        <a href="assignments/loading-bar/loading-bar/index.html">loading-bar</a>
-        <a href="assignments/loading-bar/waiting circle/index.html">waiting circle</a>
-    
+        <a href="assignments/css_intro/index.html" >
+            
+            <img src="images_gifs/giphy.gif" alt="css_intro"></a>
+                <div>css_intro</div>
+         <a href="assignments/geocities/index.html">
+            <img src="images_gifs/096740ee74be1da78f88d2cc025173b1.jpg" alt="geocities"></a>  
+                <div>geocities</div>
+         <a href="assignments/smartphone/index.html">
+            <img src="images_gifs/giphy-1.gif" alt="smartphone"></a> 
+                 <div>smartphone</div>
+        <a href="assignments/loading-bar/loading-bar/index.html">
+             <img src="images_gifs/tenor-1.gif" alt="loading-bar"></a> 
+                <div>loading-bar</div>
+         <a href="assignments/loading-bar/waiting circle/index.html">
+            <img src="images_gifs/ZZ5H.gif" alt="waiting-circle"></a> 
+                <div>waiting-circle</div>
     </nav>
 </body>
 </html>
