--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="images_gifs/096740ee74be1da78f88d2cc025173b1.jpg" alt="geocities"></a>  
                 <div>geocities</div>
          <a href="assignments/smartphone/index.html">
-            <img src="images_gifs/giphy-1.gif" alt="smartphone"></a> 
+            <img src="images_gifs/bugs.jpg" alt="smartphone"></a> 
                  <div>smartphone</div>
         <a href="assignments/loading-bar/loading-bar/index.html">
              <img src="images_gifs/tenor-1.gif" alt="loading-bar"></a> 
@@ -27,6 +27,9 @@
          <a href="assignments/loading-bar/waiting circle/index.html">
             <img src="images_gifs/ZZ5H.gif" alt="waiting-circle"></a> 
                 <div>waiting-circle</div>
+         <a href="assignments/gallery/index.html">
+            <img src="images_gifs/unnamed.jpg" alt="gallery"></a> 
+                 <div>gallery</div>
     </nav>
 </body>
 </html>
