--- a/assignments/gallery/index.html
+++ b/assignments/gallery/index.html
@@ -20,7 +20,7 @@
     
     
 <div class="grid-gallery"></div>
-    <img src="cake_images /images-1.jpeg"alt="cake-1" class="grid-item">
+    <img src="cake_images /images-1.jpeg"alt="" class="grid-item">
     <img src="cake_images /images-2.jpeg"alt="" class="grid-item"> 
     <img src="cake_images /images.jpeg"alt="" class="grid-item">
     <img src="cake_images /Unknown-1.jpeg"alt="" class="grid-item">
