--- a/assignments/gallery/index.html
+++ b/assignments/gallery/index.html
@@ -13,7 +13,7 @@
 </style>
 <h1> 
 <nav>
-    <a href="/index.html"> Photo Gallery
+    <a href="/index.html"> Photo Gallery</a>
             
 </nav>
 </h1>
