--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
          <a href="assignments/gallery/index.html">
             <img src="images_gifs/unnamed.jpg" alt="gallery"></a> 
                  <div>gallery</div>
+         <a href="assignments/freestyle/index.html">
+            <img src="images_gifs/01065670435f324e310380f8da098826.png" alt="freestyle"></a> 
+                <div>freestyle</div>
+                         
+
     </nav>
 </body>
 </html>
