--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
          <a href="assignments/freestyle/index.html">
             <img src="images_gifs/01065670435f324e310380f8da098826.png" alt="freestyle"></a> 
                 <div>freestyle</div>
+        <a href="assignments/final_project/index.html">
+            <img src="images_gifs/Unknown-9.jpeg" alt="freestyle"></a> 
+                <div>final_project</div>
+                                 
                          
 
     </nav>
