--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="images_gifs/01065670435f324e310380f8da098826.png" alt="freestyle"></a> 
                 <div>freestyle</div>
         <a href="assignments/final_project/index.html">
-            <img src="images_gifs/Unknown-9.jpeg" alt="freestyle"></a> 
+            <img src="images_gifs/Unknown-9.jpeg" alt="final_project"></a> 
                 <div>final_project</div>
                                  
                          
